--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,13 @@
 @import "./fishlist.css";
 
 img {
-    width: 50px;
+    width: 100px;
+}
+
+h3 {
+    text-align: center;
+    font-size: 26px;
+    margin: 2px;
 }
 
 .contentContainer {
