--- a/styles/travellist.css
+++ b/styles/travellist.css
@@ -11,12 +11,12 @@
 }
 
 .quote {
-    height: 225px;
+    height: 230px;
     border-top: 1px solid black;
 }
 
 .location {
-    height: 225px;
+    height: 230px;
     border-top: 1px solid black;
 }
 
@@ -30,6 +30,7 @@
     font-weight: bold;
     padding-right: 1em;
     margin: 0;
+    flex-basis: 48%;
 }
 
 .quote__location {
@@ -37,6 +38,7 @@
     font-style: italic;
     padding-right: 1em;
     margin: 0;
+    flex-basis: 48%;
 }
 
 .location__image {
