--- a/styles/fishlist.css
+++ b/styles/fishlist.css
@@ -1,5 +1,5 @@
 .fishList {
-    background-color: aquamarine;
+    /* background-color: aquamarine; */
 }
 
 .fishContainer {
@@ -7,12 +7,14 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     padding: 5px;
+    border-right: 1px solid #d8dee8;
 }
 
 .fish {
     margin: 1em;
     padding: 1em;
-    border: 1px solid black;
+    background-color: #d8dee8;
+    /* border: 1px solid black; */
     flex-basis: 24%;
     font-size: 12px;
 }
