--- a/styles/main.css
+++ b/styles/main.css
@@ -6,14 +6,29 @@ img {
     width: 100px;
 }
 
+header {
+    padding: 20px;
+    margin-bottom: 5px;
+    background-color: #a6c8ff;
+
+
+}
+h1 {
+    text-align: center;
+    background-color: #a6c8ff;
+}
+
 h3 {
     text-align: center;
     font-size: 26px;
-    margin: 2px;
+    margin: 0;
 }
 
 .contentContainer {
+    margin-top: 0px;
+    padding-top: 5px;
     display: flex;
+    border-top: 1px solid #d8dee8;
 }
 
 .contentContainer__left {
@@ -25,5 +40,5 @@ h3 {
 }
 
 section, article, aside {
-    border: 1px dashed blue;
+    /* border: 1px dashed blue; */
 }
