--- a/styles/tipslist.css
+++ b/styles/tipslist.css
@@ -1,4 +1,8 @@
 .tip__species, .tip__topic, .tip__text {
     margin: 0;
-    padding-left: 5px;
+    padding-left: 2em;
+}
+
+.tip {
+    margin-top: 15px;
 }
