--- a/styles/fishlist.css
+++ b/styles/fishlist.css
@@ -1,5 +1,5 @@
 .fishList {
-    /* background-color: aquamarine; */
+    background-color:#dfebff;
 }
 
 .fishContainer {
@@ -11,11 +11,11 @@
 }
 
 .fish {
-    margin: 1em;
-    padding: 1em;
+    margin: 0.1em;
+    padding: 0.1em;
     background-color: #d8dee8;
     /* border: 1px solid black; */
-    flex-basis: 24%;
+    flex-basis: 20%;
     font-size: 12px;
 }
 
